# Music-Square-Remake

./: .gitignore  CMakeLists.txt
include/: camera.hpp  conductor.hpp  configdata.hpp  configstate.hpp  game.hpp  gamedata.hpp  loadstate.hpp  map.hpp  menuplaydata.hpp  menustate.hpp  parser.hpp  platform.hpp  playstate.hpp  selectionstate.hpp  square.hpp  state.hpp
include/Adds/: Camera.hpp  Debug.hpp  Math.hpp
include/Data/: GameData.hpp  InterfaceData.hpp  ParsedMapData.hpp  SettingsData.hpp  SongData.hpp  UserData.hpp
include/Game/: BackgroundScene.hpp  Camera.hpp  Conductor.hpp  Game.hpp  Map.hpp  MapGenerator.hpp  Platform.hpp  Screen.hpp  Square.hpp  map.hpp
include/States/: About.hpp  Load.hpp  MapSelection.hpp  Menu.hpp  Play.hpp  Settings.hpp  SongSelection.hpp  State.hpp
include/Tools/: Debug.hpp  Filesystem.hpp  InterfaceTool.hpp  Math.hpp  Parser.hpp
libraries/ImGui/: imgui_demo.cpp
resources/songs/All Star/: All Star.mid
resources/songs/At the speed of light/: At the Speed of Light - Dimrain47.mid  new map 1.map
resources/songs/DDLC/: new map 1.map
resources/songs/Everlasting Summer/: Sergey Eybog - Everlasting Summer.mid  new map 1.map
resources/songs/FNaF 1 Song/: new map 1.map
resources/songs/Fury of the storm/: DragonForce — Fury of the Storm [MIDIfind.com].mid  new map 1.map
resources/songs/Lets be friends/: Sergey Eybog - Let's be friends.mid
resources/songs/Loonboon/: PlantsVs.Zombies-Loonboon(ColomboGMGS2).mid  PvZ-Loonboon.mid_1612468846906.mid.mid  new map 1.map
resources/songs/Megalovania/: new map 1.map  new map 2.map
resources/songs/Oddloop/: new map 1.map  oddloop (オドループ).mid
resources/songs/Otherside/: new map 1.map
resources/songs/RR/: [MIDI] Rick Astley-Never Gonna Give You Up.mid  new map 1.map
resources/songs/Sugar Crash/: new map 1.map
resources/songs/Tell me why/: Berserk - Tell Me Why.mid
resources/songs/Valley of the Damned/: DragonForce — Valley of the Damned [MIDIfind.com].mid  new map 1.map
resources/songs/[BLACK MIDI] Rush E/: [Black MIDI] RUSH E.mid  new map 1.map
source/: camera.cpp  conductor.cpp  configstate.cpp  game.cpp  gamedata.cpp  loadstate.cpp  main.cpp  map.cpp  menustate.cpp  parser.cpp  platform.cpp  playstate.cpp  selectionstate.cpp  square.cpp
source/Adds/: Camera.cpp  Conductor.cpp  Debug.cpp  Math.cpp  Parser.cpp
source/Data/: GameData.cpp  InterfaceData.cpp  SettingsData.cpp  UserData.cpp
source/Game/: BackgroundScene.cpp  Camera.cpp  Conductor.cpp  Game.cpp  Map.cpp  MapGenerator.cpp  Platform.cpp  Screen.cpp  Square.cpp  map.cpp
source/States/: About.cpp  Load.cpp  MapSelection.cpp  Menu.cpp  Play.cpp  Settings.cpp  SongSelection.cpp
source/Tools/: Debug.cpp  Filesystem.cpp  InterfaceTool.cpp  Math.cpp  Parser.cpp
